# blueberry-peak-forecast-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODEX_MASTER_PROMPT.md  CODEX_TASKS.md  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  postgres-integration.yml
.local/state/gh/: device-id
backend/: Dockerfile  __init__.py  alembic.ini
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_task0_baseline.py  0002_master_data.py  0003_historical_ingest.py  0004_daily_facts_peak_metrics.py  0005_baseline_backtest.py  0006_minimal_input_parameters.py  0007_prod_plan_phenology.py  0007_production_plan_and_phenology.py  0008_weather_timeline.py  0009_natural_maturity_curve.py  0010_harvest_state_persistence.py  0011_residual_model.py  0012_residual_model_execution_attempt.py  0012_rolling_backtest.py  0013_rolling_backtest_orchestration.py  0014_task9_historical_authority.py
backend/app/: cli.py  main.py
backend/app/analytics/: __init__.py  config.py  daily_facts.py  peak_metrics.py
backend/app/api/: harvest_state.py  health.py  master_data.py  maturity.py  planning.py  production_plans.py  weather.py
backend/app/baseline/: __init__.py  (+11 more)
backend/tests/: conftest.py  postgres_test_support.py  test_alembic_baseline.py  test_config.py  test_harvest_state_alembic.py  test_harvest_state_api.py  test_harvest_state_cli.py  test_harvest_state_reports.py  test_health.py  test_lifespan.py  test_postgres_test_support.py  test_residual_model_alembic.py  test_residual_model_cli.py  test_task9_authority_models.py
configs/: analytics_rules.yaml  baseline_model.yaml  factory_aliases.yaml  import_rules.yaml  maturity_curve.yaml  parameter_inference.yaml  production_plan.yaml  residual_model.yaml  source_manifest.yaml  variety_aliases.yaml  weather_features.yaml
data/templates/: agro_climate_zones.csv  base_temperature_training_manifest.csv  farm_location_master.csv  labor_history.csv  location_weather_mappings.csv  maturity_curve_training_manifest.csv  parameter_observations.csv  phenology_history.csv  production_plans.csv  season_variety_planting.csv  weather_daily_observations.csv  weather_history.csv  weather_source_locations.csv
docs/: 02_model_spec.md  03_database_design.md  04_historical_import.md  05_daily_facts_and_peak_metrics.md  06_baseline_backtest.md  07_minimal_input_parameter_inference.md  10_minimal_input_agent_spec.md  11_output_report_spec.md  11_production_plan_and_phenology.md  12_weather_and_phenology_timeline.md  13_natural_maturity_curve.md  task-11-infra-postgres-test-plan.md  task-11-phase3-authority-schema-amendment.md  task-11-phase3-design-amendment.md
scripts/: build_daily_facts.py  build_weather_features.py  create_minimal_planning_task.py  forecast_natural_maturity.py  import_agro_climate_zones.py  import_history.py  import_location_references.py  import_location_weather_mappings.py  import_parameter_library.py  import_production_plans.py  import_weather_locations.py  import_weather_observations.py  run_baseline_backtest.py  run_postgres_integration_tests.sh  search_base_temperature.py  train_maturity_curve.py
sql/: schema.sql
(+264 files in other folders)
