[project]
name = "blueberry-peak-forecast-agent"
version = "0.1.0"
description = "Blueberry processing peak forecast agent backend bootstrap"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "numpy>=2.3.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "PyYAML>=6.0.2",
    "scikit-learn>=1.7.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn[standard]>=0.34.0",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.11.0",
    "xlwt>=1.3.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.11.0",
    "xlwt>=1.3.0",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
blueberry-forecast = "backend.app.cli:main"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "integration: tests that require external services such as PostgreSQL",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml", "xlrd", "xlrd.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sklearn", "sklearn.*"]
ignore_missing_imports = true
